<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="?android:attr/colorBackground">
    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>
    <ImageView
        android:id="@+id/imageApp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Logo"
        android:src="@drawable/image_app"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_app_name"
        android:layout_marginBottom="20dp"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnContinuer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/btn_continuer"
        android:background="@drawable/btn_custom"
        android:textColor="@color/secondary" />


</LinearLayout>